--- a/header/Header.scss
+++ b/header/Header.scss
@@ -18,7 +18,13 @@
     border: grey solid 2px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+  }
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: rgb(206, 144, 144) solid 2px;
   }
   }
 }
