--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-h1, p {
-  font-family: Lato;
+.container {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; */
+  margin: 0 auto;
+  border: grey solid 2px;
+  height: 100vh;
+  /* width: 80%; */
 }
