--- a/header/Header.scss
+++ b/header/Header.scss
@@ -2,33 +2,44 @@
   border: grey solid 2px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  height: 100px;
+  justify-content: space-around;
+  height: 60px;
   width: 100%;
   position: sticky;
   top: 0;
   bottom: 0;
+  background-color: #FCFCFC;
+  box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
   .logo {
     border: grey solid 2px;
     width: 200px;
   }
   .info {
     border: grey solid 2px;
-    width: 150px;
+    width: 100px;
     display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  // justify-content: space-between; 
+  align-items: center;
   .info_data {
     border: grey solid 2px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0;
+    h5, p {
+      border: grey solid 2px;
+      margin: 0;
+    }
   }
   .avatar {
-    width: 50px;
-    height: 50px;
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
     border: rgb(206, 144, 144) solid 2px;
+    font-size: 10px;
+    margin: 0 auto;
   }
   }
 }
