--- a/features/profile/Profile.scss
+++ b/features/profile/Profile.scss
@@ -21,6 +21,9 @@
       width: 100px;
       height: 100px;
       border: grey solid 2px;
+      p {
+        
+      }
     }
     .info_data {
       border: grey solid 2px;
